:bug: ProductMeta: Fix custom scrollbars overflow-x bar

--- a/leblanc/components/Product/ProductMeta/ProductMeta.module.css
+++ b/leblanc/components/Product/ProductMeta/ProductMeta.module.css
@@ -79,6 +79,11 @@
     @apply mb-4;
   }
 }
+.scrolbars {
+  & > div {
+    overflow-x: auto !important;
+  }
+}
 
 :global(.dark) {
   & .fullButton {
